--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Custom JS -->
     <script src="./js/index.js"></script>
 
-    <title>Hello, world!</title>
+    <title>Javascript Weather App</title>
   </head>
   <body>
     <div class="location">
