--- a/index.html
+++ b/index.html
@@ -5,34 +5,30 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/style.css">
-
-    <!-- Custom JS -->
-    <script src="./js/index.js"></script>
 
     <title>Javascript Weather App</title>
   </head>
   <body>
     <div class="location">
       <h1 class="location-timezone">Timezone</h1>
-      <p>Icon</p>
+      <canvas class="icon" width="128" height="128"></canvas>
     </div>
-    <div class="temperature">
+    <div class="temperature-section">
       <div class="degree-section">
-        <h2 class="temperature-degree">32</h2>
+        <h2 class="temperature-degree"></h2>
         <span>F</span>
       </div>
         <div class="temperature-description">It's cold!</div>
     </div>
+    <div class="yaelSection">
+      <h3>Created by <a href="https://github.com/yaelBrown">Yael Brown</a>.</h3>
+      <h3><a href="https://github.com/yaelBrown/jsWeatherApp">Github</h3>
+    </div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <!-- Custom JS -->
+    <script src="./js/skycons.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
